<resources>
    <string name="loading">正在加载数据请稍后……</string>
    <string name="app_name">海淘</string>
    <string name="action_settings">設置</string>
    <string name="title_activity_ihai_go_main">海淘</string>
    <string name="tab_rec">精选</string>
    <string name="tab_topic">话题</string>
    <string name="tab_shopcar">购物车</string>
    <string name="tab_shipping">物流</string>
    <string name="tab_personal">我</string>
    <string name="title_activity_setting">系统设置</string>
    <string name="title_activity_personal">个人中心</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_recommend">iHaigo</string>
    <string name="title_activity_shop_car">购物车</string>
    <string name="title_activity_shipping">物流</string>
    <string name="title_activity_sortsearch">分类搜索</string>
    <string name="title_activity_selpurchaseagent">选择代购商</string>
    <string name="title_activity_puragentdetail">代购商详情</string>
    <string name="title_activity_confirmbill">确认订单</string>
    <string name="title_activity_paybill">支付订单</string>
    <string name="title_activity_userlogin">iHaigo</string>
    <string name="title_activity_topic">海淘话题</string>
    <string name="title_activity_topicpublish">发表</string>
    <string name="title_activity_transcomdetail">转运公司详情</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="oldprice">原价：</string>
    <string name="discounted">约</string>
    <string name="latestrate">最新汇率</string>
    <string name="renminbi">人民币</string>
    <string name="latestrate_list">汇率一览</string>
    <string name="sortsearch_search_hint">请输入您要搜索的产品名称</string>
    <string name="sort_search_hot_tv">热门精选：</string>
    <string name="title_back">返回</string>
    <string name="title_settings">设置</string>
    <string name="title_share">分享</string>
    <string name="title_edit">编辑</string>
    <string name="title_add">添加</string>
    <string name="title_publish">发布</string>
    <string name="title_save">完成</string>
    <string name="title_complete">完成</string>
    <string name="ssr_hot_tv">人气</string>
    <string name="ssr_discount_tv">折扣</string>
    <string name="ssr_price_tv">价格</string>
    <string name="shopcar_tip">购物车内共</string>
    <string name="shopcar_tipgoods">件商品</string>
    <string name="shopcar_bottom_allsel">全选</string>
    <string name="shopcar_bottom_discounted">折约</string>
    <string name="shopcar_bottom_counts_label">数量</string>
    <string name="shopcar_bottom_price_label">价格</string>
    <string name="shopcar_bottom_pay">结算</string>
    <string name="shopcar_supporthomecredit">国内信用卡</string>
    <string name="shopcar_translatecom">转运公司</string>
    <string name="shopcar_supportredirectorpost">支持直邮</string>
    <string name="shopcar_goods_colorlabel">颜色：</string>
    <string name="shopcar_goods_rulelabel">尺寸：</string>
    <string name="shopcar_goods_movefavorite">移至收藏夹</string>
    <string name="shopcar_goods_addshopcar">已加入购物车</string>
    <string name="shopcar_goods_deletegoods">删除</string>
    <string name="shopcar_goods_deletesuccess">删除成功</string>
    <string name="shopcar_goods_addfavorite">加入收藏</string>
    <string name="shopcar_goods_nogoods">请选择商品后在提交</string>
    <string name="shopcar_goods_nostocks">没有库存了</string>
    <string name="empty_shopcar_text">购物车空空如也，赶快点我去逛逛吧</string>
    <string name="dialogtip">提示</string>
    <string name="dialogcancel">取消</string>
    <string name="dialogconfirm">确定</string>
    <string name="dialogaddfavorite">是否确认将该商品移入商品收藏？</string>
    <string name="dialogselbuyway">请选择购买方式</string>
    <string name="dialogselfbuy">自己购买</string>
    <string name="dialogotherbuy">找人代购</string>
    <string name="puragent_goodstip">以下您的预代购商品：</string>
    <string name="puragent_quantity">数量:</string>
    <string name="puragent_total">总计：</string>
    <string name="puragent_discount">折约</string>
    <string name="puragent_sortdefault">默认</string>
    <string name="puragent_sortprice">价格</string>
    <string name="puragent_sortspeed">速度</string>
    <string name="puragent_sortservice">服务</string>
    <string name="puragent_credit">信用</string>
    <string name="puragent_fee">收费</string>
    <string name="puragent_shipping">物流</string>
    <string name="puragent_service">服务</string>
    <string name="puragent_price">一口价</string>
    <string name="purdetail_supportreback">支持退货</string>
    <string name="purdetail_supoortcancelorder">支持付款后24内取消订单</string>
    <string name="purdetail_fixedprice">一口价</string>
    <string name="purdetail_desc">代购介绍</string>
    <string name="purdetail_statement">承诺声明</string>
    <string name="purdetail_userevaluation">用户评价</string>
    <string name="purdetail_service">立即服务</string>
    <string name="shopcar_confirmbill_quantity">数量:</string>
    <string name="shopcar_confirmbill_total">共计</string>
    <string name="shopcar_confirmbill_price">件商品，代购价为</string>
    <string name="shopcar_confirmbill_address">收货地址</string>
    <string name="shopcar_confirmbill_confirmaddress">请选择收货地址</string>
    <string name="shopcar_confirmbill_comments">备注信息</string>
    <string name="shopcar_confirmbill_commentshint">备注(选填)</string>
    <string name="shopcar_confirmbill_buytype">支付方式</string>
    <string name="shopcar_confirmbill_buytypeval">请选择支付方式</string>
    <string name="shopcar_confirmbill_commitbill">提交订单</string>
    <string name="shopcar_confirmbill_cancel">取消</string>
    <string name="shopcar_confirmbill_complete">完成</string>
    <string name="shopcar_confirmbill_addnewaddress">添加新地址</string>
    <string name="shopcar_paybill_desc">备注信息</string>
    <string name="shopcar_paybill_payamount">支付金额</string>
    <string name="shopcar_paybil_paybill">支付订单</string>
    <string name="personal_userlogin_first_hint">请输入您的11位手机号码用于登录注册使用</string>
    <string name="personal_reg_msg_hint_first">欢迎您首次注册iHaigo,我们需要验证您的手机号码</string>
    <string name="personal_send_msg_hint">现已发送短信验证码至您的手机</string>
    <string name="personal_enter_msgcode">请输入短信验证码</string>
    <string name="personal_enter_tel">请输入手机号码</string>
    <string name="personal_enter_loginpsd">请输入登录密码</string>
    <string name="personal_confirm_loginpsd">请再次确认密码</string>
    <string name="head_icon">头像</string>
    <string name="nickName">昵称</string>
    <string name="sex">性别</string>
    <string name="view_login">or</string>
    <string name="introduce">一句话介绍</string>
    <string name="bingdingtel">绑定手机号码</string>
    <string name="third_login_sina_hint">新浪微博授权登录</string>
    <string name="third_login_qq_hint">腾讯QQ授权登录</string>
    <string name="user_point_hint">距Lv2还差100成长值</string>
    <string name="user_lucky_hint">Lv1用户每日有3次抽取分红机会，您今日还剩余2次</string>
    <string name="nickName_hint">昵称由2-8个汉字或4-16位英文字母组成</string>
    <string name="psd_hint">密码由6~20位英文字母、数字或符号组成</string>
    <string name="again_setting_loginpsd">请重新设置您的登录密码</string>
    <string name="setting_psd">请设置登录密码，以免重复验证登录</string>
    <string name="return_login">欢迎回到iHaigo!请输入您的登录密码</string>
    <string name="not_setting_loginpsd_hint">由于您未设置登录密码，我们需要重新验证手机号码</string>
    <string name="find_psd">找回密码</string>
    <string name="personal_account">账户安全</string>
    <string name="personal_goods_collect">商品收藏</string>
    <string name="personal_info">信息中心</string>
    <string name="personal_logistics">物流中心</string>
    <string name="personal_order">订单中心</string>
    <string name="personal_quality_transport">转运中心</string>
    <string name="personal_topic">话题中心</string>
    <string name="personal_userlogin_next">下一步</string>
    <string name="personal_login_msg">秒后重新获取</string>
    <string name="personal_login_msg_data">59</string>
    <string name="personal_service_hint">确认即表示同意并遵守</string>
    <string name="personal_service_clause">《iHaigo服务条款》</string>
    <string name="personal_trade_service_clause">《iHaigo个人账户服务条款》</string>
    <string name="personal_edit_info">编辑个人资料</string>
    <string name="personal_user_pay">充值</string>
    <string name="dialog_user_photo_title">操作</string>
    <string name="dialog_user_photo">拍照</string>
    <string name="dialog_user_Album">从相册选取</string>
    <string name="dialog_user_cancel">取消</string>
    <string name="dialog_user_sex">用户性别修改</string>
    <string name="dialog_user_man">男</string>
    <string name="dialog_user_woman">女</string>
    <string name="personal_indent_search">运单检索</string>
    <string name="personal_indent_all">全部物流</string>
    <string name="personal_one_month">近一个月物流</string>
    <string name="personal_three_month">近三个月物流</string>
    <string name="personal_six_month">近六个月物流</string>
    <string name="personal_setting_inform">通知</string>
    <string name="personal_setting_recommend">推荐我们</string>
    <string name="personal_setting_love">喜欢我们，投一票</string>
    <string name="personal_setting_opinion">意见反馈</string>
    <string name="personal_setting_version">版本检测</string>
    <string name="personal_setting_version_num">V 1.0</string>
    <string name="personal_setting_about">关于</string>
    <string name="personal_setting_clear_cache">清除本地缓存</string>
    <string name="personal_quit_account">退出当前账号</string>
    <string name="bingding_tel_login_hint">绑定手机号后，可直接使用该号码登录iHaigo</string>
    <string name="sure">确认</string>
    <string name="next">下一步</string>
    <string name="find_psd_hint">您正在找回密码，我们需要验证您的手机号码</string>
    <string name="account_balance">账户余额</string>
    <string name="money">￥00.00</string>
    <string name="intro">海淘小王子~</string>
    <string name="level">LV9</string>
    <string name="level_next">LV2</string>
    <string name="level_now">LV1</string>
    <string name="name">裸奔的兔子</string>
    <string name="my_nickName">我的昵称</string>
    <string name="intro_hint">一句话介绍由1~20个字符组成</string>
    <string name="personal_credit">充值金额</string>
    <string name="personalenter_credit">请输入充值金额</string>
    <string name="transaction_amount">交易密码</string>
    <string name="transaction_enter_amount">请输入交易密码</string>
    <string name="recharge">立即充值</string>
    <string name="level_num_first">0</string>
    <string name="level_num_second">75</string>
    <string name="level_num_third">150</string>
    <string name="level_num_four">225</string>
    <string name="level_num_five">300</string>
    <string name="personal_collection">收藏列表</string>
    <string name="collection_editor">编辑</string>
    <string name="collection_save">保存</string>
    <string name="collection_discount">折约</string>
    <string name="title_setting_inform">通知设置</string>
    <string name="accept_new_inform">接收新消息通知</string>
    <string name="inform_start">已开启</string>
    <string name="accept_inform_type">接收通知类型</string>
    <string name="close">已关闭</string>
    <string name="accept_inform_time_frame">通知接收时段</string>
    <string name="time">0:00~24:00</string>
    <string name="voice">声音</string>
    <string name="vibration">振动</string>
    <string name="flashlight">闪光灯</string>
    <string name="accept_new_inform_hint">如果您要关闭或开启iHaigo的新消息通知，请在手机的“设置”-“通知”功能中进行设置</string>
    <string name="accept_inform_type_hint">如果您需要更改部分信息的通知，可以通过设置接收通知类型，来关闭或开启信息通知</string>
    <string name="accept_inform_time_frame_hint">设置通知提示声音、振动或闪烁的时段</string>
    <string name="accept_inform_voice_hint">当iHaigo正在运行时，您可以设置是否需要声音、振动或者闪光灯</string>
    <string name="title_setting_opinion">意见反馈</string>
    <string name="title_setting_aboutus">关于</string>
    <string name="setting_opinion_hint">在此留下您的意见，我们会努力做得更好</string>
    <string name="setting_opinion_tel_hint">如方便，请在此留下您的联系方式</string>
    <string name="title_setting_inform_type">通知类型</string>
    <string name="title_activity_quality_transport">QualityTransportActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="find_trade_pasd">找回交易密码</string>
    <string name="find_trade_psd_hint">您正在找回交易密码，我们需要验证手机号码</string>
</resources>