<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEEEC"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/title_left"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/title_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_activity_setting"
            android:textColor="@color/title_font"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/title_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/rec_search"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/setting_inform"
        style="@style/settings_text"
        android:text="@string/personal_setting_inform" />

    <TextView
        android:id="@+id/setting_recommend"
        style="@style/settings_text"
        android:text="@string/personal_setting_recommend"
        android:visibility="gone" />

    <View
        style="@style/greyBg"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/setting_love"
        style="@style/settings_text"
        android:text="@string/personal_setting_love"
        android:visibility="gone" />

    <TextView
        android:id="@+id/setting_opinion"
        style="@style/settings_text"
        android:text="@string/personal_setting_opinion" />

    <View
        style="@style/greyBg"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/setting_version"
            style="@style/settings_text"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:drawableRight="@null"
            android:text="@string/personal_setting_version" />

        <TextView
            android:id="@+id/settings_version"
            style="@style/settings_text"
            android:layout_width="100dp"
            android:text="@string/personal_setting_version_num" />
    </LinearLayout>

    <View
        style="@style/greyBg"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/setting_about"
        style="@style/settings_text"
        android:text="@string/personal_setting_about" />

    <TextView
        android:id="@+id/setting_clear_cache"
        style="@style/settings_text"
        android:text="@string/personal_setting_clear_cache" />

    <TextView
        android:id="@+id/quit_now_account"
        style="@style/settings_text_quit"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:text="@string/personal_quit_account"
        android:textColor="#ff0000"
        android:visibility="gone" />

</LinearLayout>