<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F4F4"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/title_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/btn_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/title_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/find_trade_pasd"
            android:textColor="@color/title_font"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/title_activity_settings"
            android:textColor="@color/title_font"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:text="@string/find_trade_psd_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:text="@string/personal_send_msg_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_msg_login"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:background="@drawable/personal_userlogin_edittext_bg"
            android:drawableLeft="@drawable/userlogin_msg"
            android:drawablePadding="15dp"
            android:hint="@string/personal_enter_msgcode"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@color/personal_edit_hint_font"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/personal_userlogin_msg_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_time_flag"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/personal_login_msg_data"
                android:textColor="@color/personal_msg_datasecond" />

            <TextView
                android:id="@+id/tv_again_msg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/personal_login_msg" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/userlogin_tv_next"
        style="@style/personalButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/next"
        android:textSize="18sp" />

</LinearLayout>