<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/personal_grayBg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/title_left"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:layout_weight="2"
            android:src="@drawable/btn_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/title_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_activity_userlogin"
            android:textColor="@color/title_font"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/title_activity_settings"
            android:textColor="@color/title_font"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:text="@string/return_login" />

    <EditText
        android:id="@+id/et_msg_login"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:password="true"
        android:background="@drawable/personal_userlogin_edittext_bg"
        android:drawableLeft="@drawable/userlogin_msg"
        android:drawablePadding="15dp"
        android:hint="@string/personal_enter_loginpsd"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="@color/personal_edit_hint_font"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_find_psd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/find_psd"
        android:textColor="@color/personal_blueBg"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/userlogin_tv_affirm"
        style="@style/personalButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sure"
        android:textSize="18sp" />

</LinearLayout>